[Aryan] ADD: Created swagger documentation and did model testing
